# zehinyoly

./: .gitignore
backend/: alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/app/: auth.py  config.py  main.py  models.py  schemas.py
backend/app/admin/: blogs.py  courses.py  uploads.py
backend/app/routes/: auth.py  blogs.py  courses.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: axios.js
frontend/src/components/: AdminLayout.jsx  Footer.jsx  IconPicker.jsx  ImageUpload.jsx  Navbar.jsx  ProtectedRoute.jsx  courseIcons.jsx
frontend/src/i18n/: en.json  index.jsx  ru.json  tk.json
frontend/src/pages/: About.jsx  Blog.jsx  BlogPost.jsx  Courses.jsx  Home.jsx
frontend/src/pages/admin/: Login.jsx  ManageBlogs.jsx  ManageCourses.jsx
frontend/src/utils/: localize.js
